apps/kutt/overlays/production/ingress-08.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kutt-ingress-08
  labels:
    app.kubernetes.io/name: kutt-ingress-08
spec:
  ingressClassName: nginx
  rules:
  - host: 08.nl
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kutt-svc
            port: 
              name: http
