apps/kutt/overlays/production/ingress-go-joris.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kutt-ingress-joris
  labels:
    app.kubernetes.io/name: kutt-ingress-joris
spec:
  ingressClassName: nginx
  rules:
  - host: go.joris.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kutt-svc
            port: 
              name: http
